--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@ body {
 div {
   width: 700px;
   margin: auto;
-  font-family: Hel
+  font-family: Helvetica Neue;
+  background-color: white;
+  padding: 30px;
 }
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
-  /* Your code here! */
+  
   color:red;
 }
 
